--- a/styles/globals.css
+++ b/styles/globals.css
@@ -617,6 +617,11 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -701,16 +706,16 @@ video {
   height: 1rem;
 }
 
-.h-20{
-  height: 5rem;
-}
-
 .h-10{
   height: 2.5rem;
 }
 
 .h-6{
   height: 1.5rem;
+}
+
+.h-20{
+  height: 5rem;
 }
 
 .w-1\/3{
@@ -755,6 +760,10 @@ video {
 
 .w-6{
   width: 1.5rem;
+}
+
+.w-\[30px\]{
+  width: 30px;
 }
 
 .max-w-lg{
@@ -1061,12 +1070,12 @@ video {
   text-align: center;
 }
 
-.font-sans{
-  font-family: Source Sans Pro, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
 .font-serif{
   font-family: Source Serif Pro, ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
+.font-sans{
+  font-family: Source Sans Pro, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-3xl{
@@ -1193,6 +1202,11 @@ video {
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-slate-300{
+  --tw-text-opacity: 1;
+  color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
 .underline{
