--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400;1,600&family=Source+Serif+Pro:wght@400;600&display=swap');
 
 /*
-! tailwindcss v3.2.1 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -32,6 +32,7 @@
 2. Prevent adjustments of font size after orientation changes in iOS.
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
+5. Use the user's configured `sans` font-feature-settings by default.
 */
 
 html {
@@ -46,6 +47,8 @@ html {
   /* 3 */
   font-family: Source Sans Pro, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
+  font-feature-settings: normal;
+  /* 5 */
 }
 
 /*
@@ -706,16 +709,16 @@ video {
   height: 1rem;
 }
 
+.h-20{
+  height: 5rem;
+}
+
 .h-10{
   height: 2.5rem;
 }
 
 .h-6{
   height: 1.5rem;
-}
-
-.h-20{
-  height: 5rem;
 }
 
 .w-1\/3{
@@ -754,16 +757,20 @@ video {
   width: 75%;
 }
 
-.w-\[42px\]{
-  width: 42px;
+.w-\[30px\]{
+  width: 30px;
 }
 
 .w-6{
   width: 1.5rem;
 }
 
-.w-\[30px\]{
-  width: 30px;
+.w-\[42px\]{
+  width: 42px;
+}
+
+.w-2\/4{
+  width: 50%;
 }
 
 .max-w-lg{
@@ -820,6 +827,10 @@ video {
 
 .flex-wrap{
   flex-wrap: wrap;
+}
+
+.content-center{
+  align-content: center;
 }
 
 .items-center{
@@ -1194,19 +1205,14 @@ video {
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
-.text-slate-700{
-  --tw-text-opacity: 1;
-  color: rgb(51 65 85 / var(--tw-text-opacity));
-}
-
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.text-slate-300{
+.text-slate-700{
   --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
+  color: rgb(51 65 85 / var(--tw-text-opacity));
 }
 
 .underline{
