--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1207,6 +1207,18 @@ video {
   margin-top: 0.25rem;
 }
 
+.ml-4{
+  margin-left: 1rem;
+}
+
+.ml-5{
+  margin-left: 1.25rem;
+}
+
+.ml-10{
+  margin-left: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -1421,6 +1433,14 @@ video {
           user-select: none;
 }
 
+.list-inside{
+  list-style-position: inside;
+}
+
+.list-decimal{
+  list-style-type: decimal;
+}
+
 .appearance-none{
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -1485,6 +1505,10 @@ video {
 
 .gap-4{
   gap: 1rem;
+}
+
+.gap-1{
+  gap: 0.25rem;
 }
 
 .self-center{
@@ -1721,6 +1745,10 @@ video {
   padding: 2.5rem;
 }
 
+.p-4{
+  padding: 1rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1807,6 +1835,22 @@ video {
   padding-bottom: 20rem;
 }
 
+.pl-4{
+  padding-left: 1rem;
+}
+
+.pl-5{
+  padding-left: 1.25rem;
+}
+
+.pl-10{
+  padding-left: 2.5rem;
+}
+
+.pl-0{
+  padding-left: 0px;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1817,6 +1861,10 @@ video {
 
 .text-start{
   text-align: start;
+}
+
+.indent-0{
+  text-indent: 0px;
 }
 
 .font-serif{
@@ -1913,6 +1961,10 @@ video {
 
 .leading-6{
   line-height: 1.5rem;
+}
+
+.leading-snug{
+  line-height: 1.375;
 }
 
 .text-white{
